@@ -6,7 +6,7 @@
 .\" Public License for copying conditions.  There is NO warranty.
 .\"
 .\" $Id$
-.TH NANO 1 "version 1.3.8" "May 29, 2005"
+.TH NANO 1 "version 1.3.8" "June 3, 2005"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 
@@ -80,10 +80,6 @@ Use the blank line below the titlebar as extra editing space.
 Set the quoting string for justifying.  The default is
 "^([\ \\t]*[|>:}#])+" if regular expression support is available, or
 ">\ " otherwise.
-.TP
-.B \-R (\-\-regexp)
-Enable regular expression matching for search strings, as well as
-\\n subexpression replacement for replace strings, if available.
 .TP
 .B \-S (\-\-smooth)
 Enable smooth scrolling.  Text will scroll line-by-line, instead of the
