@@ -6,7 +6,7 @@
 .\" Public License for copying conditions.  There is NO warranty.
 .\"
 .\" $Id$
-.TH NANORC 5 "version 1.3.8" "May 29, 2005"
+.TH NANORC 5 "version 1.3.8" "June 3, 2005"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .SH NAME
@@ -121,9 +121,6 @@ above stands for a literal Tab character.
 Interpret the Delete key differently so that both Backspace and Delete
 work properly.  You should only need to use this option if Backspace
 acts like Delete on your system.
-.TP
-\fBset/unset regexp\fP
-Do regular expression searches by default.
 .TP
 \fBset/unset smarthome\fP
 Make the Home key smarter.  When Home is pressed anywhere but at the
