@@ -91,9 +91,6 @@
 ## Fix Backspace/Delete confusion problem.
 # set rebinddelete
 
-## Do extended regular expression searches by default.
-# set regexp
-
 ## Make the Home key smarter.  When Home is pressed anywhere but at the
 ## very beginning of non-whitespace characters on a line, the cursor
 ## will jump to that beginning (either forwards or backwards).  If the
