@@ -398,6 +398,7 @@ typedef struct syntaxtype {
 #define NANO_WHEREIS_NEXT_KEY	NANO_ALT_W
 #define NANO_WHEREIS_NEXT_FKEY	KEY_F(16)
 #define NANO_TOOTHERWHEREIS_KEY	NANO_CONTROL_T
+#define NANO_REGEXP_KEY		NANO_ALT_R
 #define NANO_REPLACE_KEY	NANO_CONTROL_4
 #define NANO_REPLACE_FKEY	KEY_F(14)
 #define NANO_ALT_REPLACE_KEY	NANO_ALT_R
@@ -467,7 +468,6 @@ typedef struct syntaxtype {
 #define TOGGLE_NOHELP_KEY	NANO_ALT_X
 #define TOGGLE_MOUSE_KEY	NANO_ALT_M
 #define TOGGLE_CUTTOEND_KEY	NANO_ALT_K
-#define TOGGLE_REGEXP_KEY	NANO_ALT_R
 #define TOGGLE_WRAP_KEY		NANO_ALT_L
 #define TOGGLE_BACKWARDS_KEY	NANO_ALT_B
 #define TOGGLE_CASE_KEY		NANO_ALT_C
